--- a/proyecto-APP-FC-main/src/Ventana.form
+++ b/proyecto-APP-FC-main/src/Ventana.form
@@ -1646,7 +1646,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <grid id="cf1f0" binding="jAgua" layout-manager="GridLayoutManager" row-count="11" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="cf1f0" binding="jAgua" layout-manager="GridLayoutManager" row-count="12" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <tabbedpane title="AGUA"/>
@@ -1737,7 +1737,7 @@
                       </component>
                       <component id="cea5e" class="javax.swing.JTextArea" binding="txtProduAGG">
                         <constraints>
-                          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                          <grid row="7" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="50"/>
                           </grid>
                         </constraints>
@@ -1747,7 +1747,7 @@
                       </component>
                       <component id="fc240" class="javax.swing.JLabel">
                         <constraints>
-                          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="SUBTOTAL:"/>
@@ -1755,7 +1755,7 @@
                       </component>
                       <component id="95f4f" class="javax.swing.JLabel" binding="lblSUBTOTAL">
                         <constraints>
-                          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="0.0"/>
@@ -1763,7 +1763,7 @@
                       </component>
                       <component id="9d573" class="javax.swing.JButton" binding="PAGARButton" default-binding="true">
                         <constraints>
-                          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="PROCESAR PAGO"/>
@@ -1771,7 +1771,7 @@
                       </component>
                       <component id="5b00c" class="javax.swing.JLabel">
                         <constraints>
-                          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="VALOR ENVIO:"/>
@@ -1779,7 +1779,7 @@
                       </component>
                       <component id="e9b43" class="javax.swing.JLabel" binding="lblValEncio">
                         <constraints>
-                          <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="0.0"/>
@@ -1787,7 +1787,7 @@
                       </component>
                       <component id="e6c17" class="javax.swing.JLabel">
                         <constraints>
-                          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="TOTAL:"/>
@@ -1795,7 +1795,7 @@
                       </component>
                       <component id="53d61" class="javax.swing.JLabel" binding="lblTOTAL">
                         <constraints>
-                          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="0.0"/>
@@ -1817,6 +1817,14 @@
                           <text value="+cedula+"/>
                         </properties>
                       </component>
+                      <component id="8c89f" class="javax.swing.JButton" binding="txtRmAgua">
+                        <constraints>
+                          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="QUITAR PRODUCTO"/>
+                        </properties>
+                      </component>
                     </children>
                   </grid>
                   <grid id="5eb22" binding="jSeco" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -1834,7 +1842,7 @@
                         <properties/>
                         <border type="none"/>
                         <children>
-                          <grid id="376bb" layout-manager="GridLayoutManager" row-count="11" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                          <grid id="376bb" layout-manager="GridLayoutManager" row-count="12" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                             <margin top="0" left="0" bottom="0" right="0"/>
                             <constraints/>
                             <properties/>
@@ -1850,7 +1858,7 @@
                               </component>
                               <vspacer id="3d026">
                                 <constraints>
-                                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                                  <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                                 </constraints>
                               </vspacer>
                               <component id="56b6c" class="javax.swing.JLabel">
@@ -1907,7 +1915,7 @@
                               </component>
                               <component id="fa681" class="javax.swing.JTextArea" binding="txtproduSeco">
                                 <constraints>
-                                  <grid row="6" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                                  <grid row="7" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                                     <preferred-size width="150" height="50"/>
                                   </grid>
                                 </constraints>
@@ -1915,7 +1923,7 @@
                               </component>
                               <component id="11859" class="javax.swing.JLabel">
                                 <constraints>
-                                  <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                  <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
                                   <text value="SUBTOTAL:"/>
@@ -1923,7 +1931,7 @@
                               </component>
                               <component id="fa5c5" class="javax.swing.JLabel">
                                 <constraints>
-                                  <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                  <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
                                   <text value="ENVIO:"/>
@@ -1931,7 +1939,7 @@
                               </component>
                               <component id="c304b" class="javax.swing.JLabel">
                                 <constraints>
-                                  <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                  <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
                                   <text value="TOTAL:"/>
@@ -1939,7 +1947,7 @@
                               </component>
                               <component id="93c2f" class="javax.swing.JLabel" binding="lblSUBTSECO">
                                 <constraints>
-                                  <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                  <grid row="8" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
                                   <text value="0.0"/>
@@ -1947,7 +1955,7 @@
                               </component>
                               <component id="c99a6" class="javax.swing.JLabel" binding="lblEnviSECO">
                                 <constraints>
-                                  <grid row="8" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                  <grid row="9" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
                                   <text value="0.0"/>
@@ -1955,7 +1963,7 @@
                               </component>
                               <component id="63219" class="javax.swing.JLabel" binding="lblTOTALSECO">
                                 <constraints>
-                                  <grid row="9" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                  <grid row="10" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
                                   <text value="0.0"/>
@@ -1963,7 +1971,7 @@
                               </component>
                               <component id="99351" class="javax.swing.JButton" binding="bntPagarSeco">
                                 <constraints>
-                                  <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                  <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
                                   <text value="PROCESAR PAGO"/>
@@ -1991,6 +1999,14 @@
                                 </constraints>
                                 <properties>
                                   <text value="*cedu*"/>
+                                </properties>
+                              </component>
+                              <component id="f57b7" class="javax.swing.JButton" binding="txtRmSeco">
+                                <constraints>
+                                  <grid row="6" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                </constraints>
+                                <properties>
+                                  <text value="QUITAR PRODUCTO"/>
                                 </properties>
                               </component>
                             </children>
